# calorie-tracker

./: .gitignore  AI_HEALTH_APP_IDEAS.md  CAL_AI_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  GOOGLE_OAUTH_SETUP.md  MARKET_ANALYSIS_REPORT.md  PRD_CALORIE_TRACKER_MVP.md  PROJECT_STATUS.md  README.md  TECHNICAL_ARCHITECTURE.md  TESTING_RESULTS.md  UX_RESEARCH_FOUNDATION.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  AWS_BEDROCK_SETUP.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.sh  start.sh  test-api.sh
backend/alembic/: env.py
backend/alembic/versions/: d16dcc6d00e1_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  food.py  oauth.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  food_cache.py  food_log.py  subscription.py  user.py  weight_log.py
backend/app/schemas/: __init__.py  auth.py  food_log.py  subscription.py  user.py  weight_log.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  food_service.py  user_service.py
backend/app/utils/: storage.py
frontend-mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
frontend-mobile/src/api/: auth.ts  client.ts  food.ts  user.ts
frontend-mobile/src/constants/: config.ts
frontend-mobile/src/navigation/: AuthNavigator.tsx  MainNavigator.tsx
frontend-mobile/src/screens/: DashboardScreen.tsx  HistoryScreen.tsx  LogFoodScreen.tsx  LoginScreen.tsx  OnboardingScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx
frontend-web/: .env.example  package-lock.json  package.json
frontend-web/src/: App.tsx  index.css
(+25 files in other folders)
